changed html structure for section one, styled section one correctly just needs a few spacing tweaks

--- a/style.css
+++ b/style.css
@@ -1,23 +1,38 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 * {
   box-sizing: border-box;
-  border: solid blue 2px;
 }
 
 body {
-  font-family: Roboto;
+  font-family: 'Roboto', sans-serif;
   display: flex;
   flex-direction: column;
+  margin: 0;
 }
+
+.section2,
+.section3,
+.section4 {
+  height: 500px;
+}
+
+
+
 
 .section1 {
   display: flex;
   flex-direction: column;
-  padding-left: 10%;
-  padding-right: 10%;
-
-
-
+  background-color: #1f2937;
+  color: white;
+  height: 400px;
+  justify-content: center;
 }
+
 
 
 
@@ -25,7 +40,18 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  padding: 20px;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  background-color: #1f2937;
 
+
+}
+
+.header .logo {
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: bold;
 }
 
 .header ul {
@@ -37,29 +63,77 @@ body {
   align-items: center;
 }
 
-a {
-  color: black;
+a,
+.subtext {
+  font-size: 18px;
+  color: #e5e7eb;
   text-decoration: none;
+}
+
+
+
+.txt .maintext {
+  font-size: 48px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+button {
+  background-color: #3882f6;
+  color: #f9faf8;
+  font-size: 20px;
+  font-weight: bold;
+  padding-left: 30px;
+  padding-right: 30px;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  border-radius: 8px;
+  border: none;
 }
 
 .main-content1 {
   display: flex;
-  gap: 10px;
+  gap: 40px;
+  padding-left: 10vw;
+  padding-right: 10vw;
+  justify-content: space-between;
 }
 
+.main-content1 .txt {
+  width: 450px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 
 .main-content1 .image {
   background-color: gray;
-  height: 150px;
-  width: 370px;
+  width: 450px;
   color: aliceblue;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cardholder {
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
 .card {
-  width: 120px;
+  width: 150px;
+  color: #1f2937;
+
+}
+
+.card .txt {
+  text-align: center;
 }
 
 .card .image {
-  width: 120px;
-  height: 120px;
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+  border: solid 4px #3882f6;
 }
